<resources>
    <string name="app_name">Auto-Skincare</string>
    <string name="title_home">Home</string>
    <string name="preferences">Preferences</string>
    <string name="history">History</string>
    <string name="start_skin_care">Start Skin Care</string>
    <string name="ready_for_your_luxurious_skin_care">Ready for your luxurious skin care?</string>
    <string name="image_at_home_page">image at home page</string>
    <string name="profile">Profile</string>
    <string name="name">Name:</string>
    <string name="user_pic">User_pic</string>
    <string name="age">Age:</string>
    <string name="skin_type">Skin Type:</string>
    <string name="product_preference">Product Preference:</string>
    <string name="toner">Toner</string>
    <string name="select_the_product_types_for_your_routine">select the product types for your routine:</string>
    <string name="serum">Serum</string>
    <string name="cream">Cream</string>
    <string name="eye_cream">Eye Cream</string>
    <string name="mist">Mist</string>
    <string name="oil">Oil</string>
    <string name="lotion">Lotion</string>
    <string name="set_the_speed_of_the_procedure">set the speed of the procedure:</string>
    <string name="speed">speed</string>
    <string name="save">Save</string>
    <string name="id">id</string>
    <string name="_18">18</string>
    <string name="product_preferences">Product Preferences:</string>
    <string name="hydrating">hydrating</string>
    <string name="anti_aging">Anti-aging</string>
    <string name="whitening">Whitening</string>
    <string name="replenishing">Replenishing</string>
    <string name="correcting">Correcting</string>
    <string name="rejuvenating">Rejuvenating</string>
    <string name="acne_treatment">Acne treatment</string>
    <string name="update_profile">update profile</string>
    <string name="anti_wrinkle">Anti-wrinkle</string>
</resources>
