<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlue">

    <TextView
        android:id="@+id/age_text"
        android:layout_width="88dp"
        android:layout_height="29dp"
        android:layout_marginStart="87dp"
        android:layout_marginLeft="87dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="200dp"
        android:layout_marginRight="200dp"
        android:text="@string/age"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="#ffffff"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_text" />

    <TextView
        android:id="@+id/name_text"
        android:layout_width="94dp"
        android:layout_height="28dp"
        android:layout_marginStart="87dp"
        android:layout_marginLeft="87dp"
        android:layout_marginEnd="200dp"
        android:layout_marginRight="200dp"
        android:text="@string/name"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="#ffffff"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_pic" />

    <TextView
        android:id="@+id/skintype_text"
        android:layout_width="94dp"
        android:layout_height="28dp"
        android:layout_marginStart="87dp"
        android:layout_marginLeft="87dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="288dp"
        android:layout_marginRight="288dp"
        android:text="@string/skin_type"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="#ffffff"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.689"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/age_text" />

    <TextView
        android:id="@+id/product_text"
        android:layout_width="293dp"
        android:layout_height="36dp"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="24dp"
        android:text="@string/product_preference"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="#ffffff"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/skintype_text" />

    <ImageView
        android:id="@+id/user_pic"
        android:layout_width="277dp"
        android:layout_height="242dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:contentDescription="@string/user_pic"
        app:layout_constraintBottom_toTopOf="@+id/name_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/usr_profile_pic" />

    <Button
        android:id="@+id/profileUpdate"
        android:layout_width="134dp"
        android:layout_height="37dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="32dp"
        android:background="#ffffff"
        android:text="@string/update_profile"
        android:textColor="@color/colorBlue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.465"
        app:layout_constraintStart_toStartOf="parent" />


</android.support.constraint.ConstraintLayout>