<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">

    <Button
        android:id="@+id/button"
        android:layout_width="145dp"
        android:layout_height="50dp"
        android:layout_marginStart="135dp"
        android:layout_marginLeft="135dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="135dp"
        android:layout_marginRight="135dp"
        android:background="@color/colorBlue"
        android:text="@string/start_skin_care"
        android:textColor="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/StartPrompt" />

    <TextView
        android:id="@+id/StartPrompt"
        android:layout_width="361dp"
        android:layout_height="53dp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="53dp"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="38dp"
        android:text="@string/ready_for_your_luxurious_skin_care"
        android:textColor="@color/colorBlue"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="20sp"
        android:textStyle="bold"
        android:typeface="sans"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SkinCarePic" />

    <ImageView
        android:id="@+id/SkinCarePic"
        android:layout_width="372dp"
        android:layout_height="214dp"
        android:layout_marginTop="76dp"
        android:contentDescription="@string/image_at_home_page"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.41"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/home_page_skin_care" />

</android.support.constraint.ConstraintLayout>